# TestTask

./: README.md
TestTaskGis/: CMakeLists.txt  Main.qml  main.cpp  mainwindow.cpp  mainwindow.h
